# SignSpeak_V2

./: .flutter-plugins-dependencies  .gitignore  DATA_COLLECTION_GUIDE.md  analyze_output.txt  main.py  pubspec.yaml  pyproject.toml
.Instructions/: ASL_ISL_PROJECT_INSTRUCTIONS.md  COMMIT_STYLE_GUIDE.md  PROJECT_DOCUMENTATION.md
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/signspeak_v2/: MainActivity.kt
assets/labels/: isl_labels.txt
assets/models/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: landmark_data.dart  prediction_result.dart
lib/screens/: collection_screen.dart  home_screen.dart  recognition_screen.dart  translation_screen.dart
lib/services/: gemini_service.dart  mediapipe_service.dart  temporal_filter.dart  tflite_service.dart
lib/widgets/: gesture_badge.dart  skeleton_overlay.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
python_training/: README.md  export_tflite.py  preprocess.py  requirements.txt  train_asl.py  train_isl.py
python_training/data/asl_raw/: README.md
python_training/data/isl_raw/: README.md
python_training/data/processed_npy/: .gitkeep
python_training/data/raw_json/: .gitkeep
python_training/models/: .gitkeep  README.md
python_training/src/: preprocess.py  train_asl.py  train_isl.py
test/: widget_test.dart
web/: index.html
windows/runner/: Runner.rc
