[project]
name = "signspeak-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "mediapipe==0.10.9",
    "numpy==1.24.3",
    "opencv-python>=4.8.1.78",
    "pandas>=2.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
[tool.uv]
override-dependencies = [
  "tensorflow-io-gcs-filesystem ; sys_platform == 'win32'"
]